--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
 name = "shai-hulud-detector"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0.0"
+description = "Shai Hulud Detector"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "typer>=0.9.0",
+    "PyGithub>=2.1.0",
+]
