--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "shai-hulud-detector"
 version = "1.0.0"
@@ -26,6 +30,9 @@ dependencies = [
   "typer>=0.9.0",
   "PyGithub>=2.1.0",
 ]
+
+[project.scripts]
+shai-hulud-detector = "src.cli:main"
 
 [project.urls]
 Homepage = "https://github.com/ysskrishna/shai-hulud-detector"
